
public static class Consts 
{
    public const int PLAYER_LAYER_ID = 8;
    public const int INTERACTIVE_LAYER_ID = 11;
    public const int HAZARD_LAYER_ID = 14;
    public const int CLIMB_LAYER_ID = 13;

    public const string CLIMB_LAYER_NAME = "Climbing";

    public const string MAIN_MENU = "Main Menu";
    public const string WIN_SCREEN = "Win Screen";
    public const string LOSE_SCREEN = "Lose Screen";
    public const string LEVEL_1 = "Level 1";

    public const string ATTACK_ANIM = "Attacking";
    public const string RUN_ANIM = "Running";
    public const string JUMP_ANIM = "Jumping";
    public const string HURT_ANIM = "Hurt";
    public const string DIE_ANIM = "Die";

    public const string HORIZONTAL_AXIS = "Horizontal";
    public const string VERTICAL_AXIS = "Vertical";
    public const string JUMP_BTN = "Jump";
}
